# gm-meshproc-2023

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md
data/pointsets/: bunny.pts  open_sphere.pts  plane.pts  sphere.pts
doc/: Grid_8cpp.html  Grid_8cpp__incl.map  Grid_8cpp__incl.md5  Grid_8h.html  Grid_8h__dep__incl.map  Grid_8h__dep__incl.md5  Grid_8h__incl.map  Grid_8h__incl.md5  Grid_8h_source.html  MarchingCubes_8cpp.html  MarchingCubes_8cpp__incl.map  MarchingCubes_8cpp__incl.md5  MarchingCubes_8h.html  MarchingCubes_8h__dep__incl.map  MarchingCubes_8h__dep__incl.md5  MarchingCubes_8h__incl.map  MarchingCubes_8h__incl.md5  MarchingCubes_8h_source.html  PointSet_8cpp.html  PointSet_8cpp__incl.map  PointSet_8cpp__incl.md5  PointSet_8h.html  PointSet_8h__dep__incl.map  PointSet_8h__dep__incl.md5  PointSet_8h__incl.map  PointSet_8h__incl.md5  PointSet_8h_source.html  README_8md.html  Viewer_8cpp.html  Viewer_8cpp__incl.map  Viewer_8cpp__incl.md5  Viewer_8h.html  Viewer_8h__dep__incl.map  Viewer_8h__dep__incl.md5  Viewer_8h__incl.map  Viewer_8h__incl.md5  Viewer_8h_source.html  annotated.html  classGrid-members.html  classGrid.html  (+93 more)
doc/search/: all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  (+30 more)
src/: CMakeLists.txt  Viewer.cpp  Viewer.h  main.cpp
src/01-reconstruction/: Grid.cpp  Grid.h  MarchingCubes.cpp  MarchingCubes.h  PointSet.cpp  PointSet.h  kDTree.cpp  kDTree.h  reconstruction-hoppe.cpp  reconstruction-poisson.cpp  reconstruction.h
